# nec

./: .gitignore  Cargo.toml  Makefile  schema.json  schema_v2.json
src/: lib.rs  main.rs
src/core/: mod.rs  out.rs  react.rs  utils.rs
src/schema/: mod.rs
src/schema/database/: mod.rs
src/schema/database/credentials/: mod.rs
src/schema/entity/: attributes.rs  mod.rs
src/schema/themes/: mod.rs
src/schema/users/: mod.rs
src/schema/users/extra_field/: mod.rs
src/schema/users/initial_admin/: mod.rs
src/setup/: error.rs  init.rs  mod.rs  modules.rs  project.rs
