[package]
name = "nec"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
anyhow = "1.0.87"
genco = "0.17.9"
relative-path = "1.9.3"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_default = "0.2.0"
serde_json = "1.0.127"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.12.0"
thiserror = "1.0.63"
which = "6.0.3"
zip = "2.2.0"
